--- a/index.html
+++ b/index.html
@@ -46,18 +46,33 @@
                 <button class="btn btn-default btn-lg">Get in Touch</button>
             </div>
             <div class="col-sm-4">
-                
+                <span class="glyphicon glyphicon-signal logo"></span>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid bt-grey">
-        <h2>My values</h2>
-        <h4><strong>MISSION:</strong> Build SOLID software</h4>
-
+    <div class="container-fluid bg-grey">
+        <div class="row">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-globe logo"></span>
+            </div>
+            <div class="col-sm-8">
+                <h2>My values</h2>
+                <h4><strong>MISSION:</strong> Build SOLID software</h4>
+            </div>
+        </div>
     </div>
 
 
+<div class="container-fluid text-center">
+    <h2>SERVICES</h2>
+    <h4>What I can offer to you!</h4>
+    <div class="row">
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-heart logo"></span>
+        </div>
+    </div>
+</div>
 
 
 
