--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <div class="jumbotron text-center">
-        <h1>My Portfolio</h1>
+        <h1>Moerwalds Portfolio</h1>
     </div>
 
     <div class="container-fluid">
